[gd_scene load_steps=22 format=3 uid="uid://chpfnnw1m5ki4"]

[ext_resource type="Script" path="res://scripts/battle/base/base_battle.gd" id="1_kvtsw"]
[ext_resource type="PackedScene" uid="uid://cglj1n7bhab8t" path="res://scenes/battle/formations/formations/formation_1.tscn" id="2_bx1pa"]
[ext_resource type="AudioStream" uid="uid://oqtvktilj55x" path="res://music/battle/lungs/lungs_battle_1.mp3" id="4_itg7f"]
[ext_resource type="Script" path="res://scripts/battle/teams/base/base_team.gd" id="5_xflcb"]
[ext_resource type="PackedScene" uid="uid://c1nbclmuxc5ri" path="res://scenes/battle/characters/immunocytes/neut.tscn" id="6_jsmpb"]
[ext_resource type="PackedScene" uid="uid://jp6ysklein1c" path="res://scenes/battle/cards/cards/test_card_1.tscn" id="7_gfeyf"]
[ext_resource type="Script" path="res://scripts/resources/character/deck_of_cards/deck_of_cards.gd" id="8_p6u03"]
[ext_resource type="PackedScene" uid="uid://cbhpmthanrcoy" path="res://scenes/battle/characters/immunocytes/eosi.tscn" id="9_shite"]
[ext_resource type="PackedScene" uid="uid://jsrso1l2r05v" path="res://scenes/battle/cards/cards/test_card_2.tscn" id="10_5k80x"]
[ext_resource type="PackedScene" uid="uid://5j1e7vk4565f" path="res://scenes/battle/characters/pathogens/viruses/influenza_virus.tscn" id="11_akwkq"]
[ext_resource type="PackedScene" uid="uid://b24m6cbrpoww8" path="res://scenes/battle/cards/cards/test_card_3.tscn" id="13_apq1b"]
[ext_resource type="PackedScene" uid="uid://dl8haap1scn22" path="res://tests/ui/action_switcher.tscn" id="14_furee"]
[ext_resource type="PackedScene" uid="uid://bjdros8jccxcd" path="res://scenes/ui/menu/menu_pause.tscn" id="15_3iakm"]
[ext_resource type="PackedScene" uid="uid://ciro0ncgqiif4" path="res://scenes/ui/battle/popup_with_character_info/left_popup_with_character_info.tscn" id="16_7vedn"]
[ext_resource type="PackedScene" uid="uid://crs4e7g1xvbjw" path="res://scenes/ui/battle/popup_with_character_info/right_popup_with_character_info.tscn" id="16_jyy2r"]
[ext_resource type="PackedScene" uid="uid://cplf5sbbg2dh0" path="res://scenes/battle/locations/locations/test_battle/test_battle.tscn" id="18_kal88"]

[sub_resource type="Resource" id="Resource_4h7qu"]
resource_local_to_scene = true
script = ExtResource("8_p6u03")
_packed_cards = Array[PackedScene]([ExtResource("7_gfeyf"), ExtResource("7_gfeyf"), ExtResource("7_gfeyf"), ExtResource("7_gfeyf"), ExtResource("7_gfeyf"), ExtResource("7_gfeyf"), ExtResource("7_gfeyf"), ExtResource("7_gfeyf"), ExtResource("7_gfeyf")])

[sub_resource type="Resource" id="Resource_lqon2"]
resource_local_to_scene = true
script = ExtResource("8_p6u03")
_packed_cards = Array[PackedScene]([ExtResource("10_5k80x"), ExtResource("10_5k80x"), ExtResource("10_5k80x"), ExtResource("10_5k80x"), ExtResource("10_5k80x"), ExtResource("10_5k80x"), ExtResource("10_5k80x"), ExtResource("10_5k80x")])

[sub_resource type="Resource" id="Resource_5ylvl"]
resource_local_to_scene = true
script = ExtResource("8_p6u03")
_packed_cards = Array[PackedScene]([ExtResource("13_apq1b"), ExtResource("13_apq1b"), ExtResource("13_apq1b")])

[sub_resource type="Resource" id="Resource_r2fx7"]
resource_local_to_scene = true
script = ExtResource("8_p6u03")
_packed_cards = Array[PackedScene]([ExtResource("13_apq1b"), ExtResource("13_apq1b"), ExtResource("13_apq1b")])

[sub_resource type="Resource" id="Resource_qm5k2"]
resource_local_to_scene = true
script = ExtResource("8_p6u03")
_packed_cards = Array[PackedScene]([ExtResource("13_apq1b"), ExtResource("13_apq1b"), ExtResource("13_apq1b")])

[node name="TestBattle" type="Node2D"]
script = ExtResource("1_kvtsw")
_packed_formation = ExtResource("2_bx1pa")
_packed_location = ExtResource("18_kal88")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_itg7f")
autoplay = true
bus = &"Music"

[node name="Teams" type="Node2D" parent="."]
y_sort_enabled = true

[node name="AllyTeam" type="Node2D" parent="Teams"]
script = ExtResource("5_xflcb")

[node name="Neut" parent="Teams/AllyTeam" instance=ExtResource("6_jsmpb")]
deck_of_cards = SubResource("Resource_4h7qu")

[node name="Eosi" parent="Teams/AllyTeam" instance=ExtResource("9_shite")]
deck_of_cards = SubResource("Resource_lqon2")

[node name="EnemyTeam" type="Node2D" parent="Teams"]
script = ExtResource("5_xflcb")
characters_group = "enemies"

[node name="InfluenzaVirus" parent="Teams/EnemyTeam" instance=ExtResource("11_akwkq")]
deck_of_cards = SubResource("Resource_5ylvl")

[node name="InfluenzaVirus2" parent="Teams/EnemyTeam" instance=ExtResource("11_akwkq")]
deck_of_cards = SubResource("Resource_r2fx7")

[node name="InfluenzaVirus3" parent="Teams/EnemyTeam" instance=ExtResource("11_akwkq")]
deck_of_cards = SubResource("Resource_qm5k2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ActionSwitcher" parent="CanvasLayer" instance=ExtResource("14_furee")]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("15_3iakm")]
visible = false

[node name="UI" type="CanvasLayer" parent="."]

[node name="PopupWithCharacterInfo" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Left" parent="UI/PopupWithCharacterInfo" instance=ExtResource("16_7vedn")]
layout_mode = 0

[node name="Right" parent="UI/PopupWithCharacterInfo" instance=ExtResource("16_jyy2r")]
layout_mode = 1
offset_left = 985.0
offset_right = 1880.0
offset_bottom = 488.0
